--- a/html/changelog.html
+++ b/html/changelog.html
@@ -78,6 +78,14 @@ ADDING CREDITS?  EDIT templates/header.html (or footer.html if they're for old t
 		*** DO NOT FUCK WITH THIS FILE OR YOU WILL CAUSE MERGE CONFLICTS. ***
 		
 		-->
+		<div class="commit sansserif">
+	<h2 class="date">09.02.2015</h2>
+	<h3 class="author">EgorkillerUA updated:</h3>
+	<ul class="changes bgimages16">
+		<li class="rscadd">Запущен сервер</li>
+	</ul>
+</div>
+
 
 		<div class="commit sansserif">
 			<h2 class="date">2014.12.11</h2>
